--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             <a href="#" class="btn btn-default css-gradient-editor-configuration" data-toggle="modal" data-target="#configmodal"><span class="pngicon-wrench"></span> Config</a>
                             <a href="" class="btn btn-default css-gradient-editor-permalink"><span class="pngicon-share"></span> Share permalink</a>
                             <a href="#" class="btn btn-default css-gradient-editor-qrcode" title="Gradient permalink QR code" data-toggle="modal" data-target="#qrmodal"><span class="pngicon-qrcode"></span> QR Code</a>
-                            <a target="_blank" href="gradient.php" class="btn btn-default css-gradient-editor-imagegradient" style="margin-right:10px"><span class="pngicon-picture"></span> Get PNG</a>
+							<a href="#" class="btn btn-default css-gradient-editor-imagegradient" style="margin-right:10px"><span class="pngicon-picture"></span> Get PNG</a>
                             <button type="button" class="btn btn-primary css-gradient-editor-copycss"><span class="pngicon-copy"></span> Copy CSS</button>
                             <button type="button" class="btn btn-primary css-gradient-editor-getcss" data-toggle="modal" data-target="#cssoutmodal" style="margin-right:10px"><span class="pngicon-file-css"></span> Get CSS</button>
                             <button type="button" class="btn css-gradient-editor-undo"><span class="pngicon-undo"></span> Undo</button>
@@ -453,7 +453,7 @@
             </div>
 
         </div>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <!--<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>-->
         <div id="coloroffsethtml" style="display:none;">
             <div class="coloroffset-container">
                 <div class="offset-hue slider-container">
@@ -489,6 +489,14 @@
         <script src="resources/syntaxhighlighter/3.0.83/shCore.js"></script>
         <script src="resources/syntaxhighlighter/3.0.83/shBrushCss.js"></script>
 
+		<script src="resources/DownloadCanvas/canvas-toBlob/canvas-toBlob.js"></script> 
+		<script src="resources/DownloadCanvas/canvg/rgbcolor.js"></script> 
+		<script src="resources/DownloadCanvas/canvg/StackBlur.js"></script>
+		<script src="resources/DownloadCanvas/canvg/canvg.js"></script> 
+		<script src="resources/DownloadCanvas/FileSaver/FileSaver.min.js"></script> 
+		<script src="resources/DownloadCanvas/DownloadCanvas.js"></script> 
+		<script src="resources/toast/toast.min.js"></script>
+
         <script>
             var ge = new CSSGradientEditor($('.css-gradient-editor-container'));
             ZeroClipboard.setDefaults({
@@ -497,10 +505,33 @@
             });
             var clip = new ZeroClipboard($(".css-gradient-editor-copycss"));
             clip.on('dataRequested', function(client, args) {
-                client.setText($("#cssoutput").data("output"));
+				client.setText(ge.updateCssOutput());
             });
             clip.on('noflash wrongflash', function(client, args) {
                 $(".css-gradient-editor-copycss").hide();
                 ZeroClipboard.destroy();
             });
+			clip.on('mouseup', function(){
+				iqwerty.toast.Toast('CSS复制成功', {
+					style: {
+						main: {
+							background: '#3396E7',
+							color: '#FFFFFF' 
+						}
+					}
+				});
+			});
+
+
+			/*download PNG*/
+			$('.css-gradient-editor-imagegradient').on('click', function(){
+				var svgData = ge.getSVGData();
+
+				/*get svg base64*/
+				svgData = svgData.match(/url\((.*?)\)/)[1];
+
+				DownloadCanvas({
+					data: svgData
+				});
+			});
         </script>
